Fix balloon overlap of chart info

--- a/src/app/dashboard/reports/reports.component.scss
+++ b/src/app/dashboard/reports/reports.component.scss
@@ -31,6 +31,7 @@
       position: absolute;
       top: 40px;
       right: 30px;
+      z-index: 9;
       .bar {
         display: flex;
         align-items: center;
@@ -105,6 +106,9 @@
       border-right: 2px solid #f00;
       border-bottom: 2px solid #f00;
       top: 2px;
+    }
+    .amcharts-chart-div {
+      z-index: 999;
     }
   }
 }
